Improved image stretching fix

--- a/styles/interactive-video.css
+++ b/styles/interactive-video.css
@@ -953,6 +953,10 @@
   margin: 0 0 1em;
 }
 
+.h5p-interactive-video .h5p-dialog-interaction.h5p-image {
+  display: block;
+  height: auto;
+}
 .h5p-interactive-video .h5p-text p:first-child {
   margin-top: 0;
 }
